src/objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_current_project__c</fullName>
        <label>Count current project</label>
        <summaryFilterItems>
            <field>Project__c.Project_is_finished__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_finished_project__c</fullName>
        <label>Count finished project</label>
        <summaryFilterItems>
            <field>Project__c.Project_is_finished__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <label>Social</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>Active_customers</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Count_current_project__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Count_current_project__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Active customers</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Email__c</columns>
        <columns>Skype__c</columns>
        <columns>Social__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inactive_customers</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Count_finished_project__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Count_current_project__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive customers</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>